[project]
name = "inverter-mqtt-bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "paho-mqtt>=2.1.0",
    "pydantic>=2.13.4",
    "pymodbus>=3.13.1",
    "pyserial>=3.5",
    "structlog>=26.1.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pre-commit>=4.6.1",
    "pytest>=9.1.1",
]
